--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "play-sound-osx"]
 	path = play-sound-osx
 	url = https://github.com/leoliu/play-sound-osx.git
+[submodule "key-leap-mode"]
+	path = key-leap-mode
+	url = https://github.com/MartinRykfors/key-leap-mode.git
